[tool.poetry]
name = "python-programming-for-professionals"
version = "0.1.0"
description = ""
authors = ["chordpli <chordplaylist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.6.1"
flask = "^3.0.0"
wait-for-it = "^2.2.2"
watchdog = "^3.0.0"
ipython = "^8.16.1"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
